fixed image sizing on mobile

--- a/static/styles/product.css
+++ b/static/styles/product.css
@@ -237,6 +237,7 @@ button {
 
     .images img {
         max-width: 95vw;
+        max-height:none;
         width: 200%;
         height: auto;
         position: relative;
